--- a/testing.html
+++ b/testing.html
@@ -12,12 +12,11 @@
         <h1 id="heading">Web Game</h1>
         <canvas id="gameCenter" width="800" height="320">
         </canvas>
-        <p id="score">Coin Count: </p>
-        <a href="testing.html">Go to Testing</a>
+        <a href="index.html">Go to Main</a>
         <p>Created by <a href="https://www.lagarto5.de" target="_blank">Yannick</a> & <a href="https://www.juqutsu.de" target="_blank">Lukas</a></p>
     </div>
     
-    <script src="js/main.js">
+    <script src="js/testing.js">
       </script>
 </body>
 </html>
